SERVER-13585 Race in dist lock after winning "tournament" round

Remove the potential state transition from 1 to 0.